--- a/src/app/components/buttons/BaseButton/BaseButton.module.scss
+++ b/src/app/components/buttons/BaseButton/BaseButton.module.scss
@@ -8,6 +8,7 @@
   color: $white;
   font-weight: $font-medium;
   line-height: 100%;
+  transition: 0.2s ease-in-out;
 
   &:hover {
     background-color: $color-primary;
