--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,7 +9,7 @@ $color-primary-dark: #793e37;
 $color-primary: #974e44;
 $color-primary-light: #b55d51;
 $color-primary-bg: #fff0ed;
-$color-primary-bg-hover: #dab9b1;
+$color-primary-bg-hover: #ffd0c5;
 
 $gray-900: #4c4c4c;
 $gray-800: #878787;
