--- a/src/app/components/buttons/WhiteButton/WhiteButton.module.scss
+++ b/src/app/components/buttons/WhiteButton/WhiteButton.module.scss
@@ -1,7 +1,7 @@
 @import '@/styles/variables';
 
 .white {
-  background-color: $white;
+  background-color: rgba(0, 0, 0, 0);
   color: $black;
 
   &:hover {
