--- a/src/app/components/Header/Header.module.scss
+++ b/src/app/components/Header/Header.module.scss
@@ -19,6 +19,30 @@
       font-size: $font-h4;
       font-weight: $font-bold;
       white-space: nowrap;
+      display: flex;
+      justify-content: center;
+
+      .logo {
+        display: inline-block;
+        width: $font-h4;
+        height: $font-h4;
+        position: relative;
+        margin-right: 5px;
+
+        &:before {
+          content: '';
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+
+          display: inline-block;
+          width: $font-h4;
+          height: $font-h4;
+          background: url('/icons/logo.svg') no-repeat center;
+          background-size: cover;
+        }
+      }
 
       strong {
         color: $color-primary;
