--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,7 @@
 @layer base {
   @layer components {
     .layout {
-      @apply mx-auto flex w-full max-w-[1080px] flex-col px-6 py-4;
+      @apply mx-auto w-full max-w-[1080px] px-6;
     }
   }
 }
